# qa-forum

./: .tmuxinator.yml  Caddyfile  README.md  compose.yaml  otel-collector-config.yml
client/: .dockerignore  .env.example  .swcrc  Dockerfile  index.html  jest.config.ts  package.json  pnpm-lock.yaml  relay.config.json  tailwind.config.js  tsconfig.json  (+1 more)
server/: .dockerignore  .env.example  Dockerfile  pyproject.toml  query_map.json
server/app/: __init__.py  config.py  constants.py  container.py  context.py  dataloaders.py  error_handlers.py  errors.py  graphql_app.py  middleware.py  openapi.py  schema.py  schemas.py  server.py  settings.py  tracing.py
server/app/audit_logs/: dataloaders.py  models.py  query.py  repositories.py  types.py
server/app/database/: base.py  dependencies.py  engine.py  paginator.py  session.py
server/app/lib/: constants.py
server/app/lib/schema/: extensions.py  field_extensions.py
server/app/questions/: dataloaders.py  exceptions.py  models.py  mutation.py  query.py  repositories.py  services.py  types.py
server/app/users/: dataloaders.py  exceptions.py  models.py  query.py  repositories.py  types.py
server/migrations/: script.py.mako
server/migrations/versions/: 06d9c3482e85_initial_migration.py  19897739fb47_add_answers.py  3a8972cc18f6_add_question_vote_types.py  551d1556bb23_remove_todos.py  722078f9ceb4_create_extensions.py  73b7726195ab_add_question_votes.py  88e2f2e220f0_add_audit_logs.py  ac8621e3cfcb_initial_migration.py  afeb91d7e38d_add_questions.py
server/scripts/: generate_openapi_schema.py  run_persist_server.py
(+62 files in other folders)
