[project]
name = "server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aryan Iyappan", email = "aryaniyappan2006@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "asgi-correlation-id>=4.3.4",
    "sqlalchemy>=2.0.36",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
